--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <i class="fas fa-bars"></i>
                     <i class="fas fa-times"></i>
                 </div>
-                <a href="index.html" class="logo"><h1>Spicy Bar</h1></a>
+                <a href="index.html" class="logo"><h1>Micky Bar</h1></a>
                 <ul class="nav-list">
                     <li class="nav-item">
                         <a href="index.html" class="nav-link active">Home</a>
@@ -49,7 +49,7 @@
                 <span class="first-letter">W</span>elcome
             </h2>
             <h1 class="headline">
-                The Spicy Bar Restaurant
+                The Micky Bar Restaurant
             </h1>
             <div class="headline-description">
                 <div class="separator">
